--- a/index.html
+++ b/index.html
@@ -22,9 +22,33 @@
 
             <div class="gallery-container">
                 <div class="gallery">
-                    <div class="slider" id="image-slider">
+                    <div class="image-container">
                         <img src="https://picsum.photos/600/300?random=1">
                     </div>
+
+                    <div class="image-container">
+                        <img src="https://picsum.photos/600/300?random=2">
+                    </div>
+
+                    <div class="image-container">
+                        <img src="https://picsum.photos/600/300?random=3">
+                    </div>
+
+                    <div class="image-container">
+                        <img src="https://picsum.photos/600/300?random=4">
+                    </div>
+
+                    <div class="image-container">
+                        <img src="https://picsum.photos/600/300?random=5">
+                    </div>
+
+                    <div class="image-container">
+                        <img src="https://picsum.photos/600/300?random=6">
+                    </div>
+
+                </div>
+                <div class="controls">
+
                 </div>
             </div>
 
@@ -54,11 +78,14 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
 <script src="js/script.js"></script>
 <script>
-    $('.slider').slick({
+    $('.gallery').slick({
         infinite: true,
-        slidesToShow: 3,
-        slidesToScroll: 3,
-        accessibility: true
+        slidesToShow: 1,
+        slidesToScroll: 1,
+        arrows: false,
+        centerMode: true,
+        nextArrow: document.getElementById('slick-next'),
+        prevArrow: document.getElementById('slick-previous')
     });
 </script>
 
