--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css" />
-
-
 </head>
 
 <body>
-    <div class="container">
+    <div class=" container">
 
         <h1>Image Generator</h1>
 
@@ -23,32 +21,44 @@
             <div class="gallery-container">
                 <div class="gallery">
                     <div class="image-container">
-                        <img src="https://picsum.photos/600/300?random=1">
+                        <img alt="Lorem Picsum Image" src="https://picsum.photos/600/300?random=1">
                     </div>
 
                     <div class="image-container">
-                        <img src="https://picsum.photos/600/300?random=2">
+                        <img alt="Lorem Picsum Image" src="https://picsum.photos/600/300?random=2">
                     </div>
 
                     <div class="image-container">
-                        <img src="https://picsum.photos/600/300?random=3">
+                        <img alt="Lorem Picsum Image" src="https://picsum.photos/600/300?random=3">
                     </div>
 
                     <div class="image-container">
-                        <img src="https://picsum.photos/600/300?random=4">
+                        <img alt="Lorem Picsum Image" src="https://picsum.photos/600/300?random=4">
                     </div>
 
                     <div class="image-container">
-                        <img src="https://picsum.photos/600/300?random=5">
+                        <img alt="Lorem Picsum Image" src="https://picsum.photos/600/300?random=5">
                     </div>
 
                     <div class="image-container">
-                        <img src="https://picsum.photos/600/300?random=6">
+                        <img alt="Lorem Picsum Image" src="https://picsum.photos/600/300?random=6">
                     </div>
 
                 </div>
                 <div class="controls">
+                    <button class="custom-prev">
+                        <span class="prev">
+                            <i class="fa fa-solid fa-caret-left"></i>
+                            Previous
+                        </span>
+                    </button>
 
+                    <button class="custom-next">
+                        <span class="next">
+                            <i class="fa fa-solid fa-caret-right"></i>
+                            Next
+                        </span>
+                    </button>
                 </div>
             </div>
 
@@ -78,14 +88,16 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
 <script src="js/script.js"></script>
 <script>
-    $('.gallery').slick({
-        infinite: true,
-        slidesToShow: 1,
-        slidesToScroll: 1,
-        arrows: false,
-        centerMode: true,
-        nextArrow: document.getElementById('slick-next'),
-        prevArrow: document.getElementById('slick-previous')
+    $(document).ready(function () {
+        $('.gallery').slick({
+            infinite: true,
+            slidesToShow: 1,
+            slidesToScroll: 1,
+            arrows: true,
+            centerMode: true,
+            nextArrow: $('.custom-next'),
+            prevArrow: $('.custom-prev')
+        });
     });
 </script>
 
