--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
                         </div>
                     </div>
 
+                    <div class="thumbnails">
+
+                    </div>
+
                     <div class="controls">
                         <button class="slide-btn custom-prev">
                             Previous
