update for testing

--- a/index.html
+++ b/index.html
@@ -26,31 +26,51 @@
                 <p>Generate images at the press of a button and assign them to your email address</p>
             </div>
 
-            <h2>Image Generator</h2>
 
-            <div class="image-box">
+            <div class="sliders-container">
 
-                <div class="gallery-container">
-                    <div class="gallery">
-                        <div class="image-container">
-                            <img alt="Lorem Picsum Image" src="https://picsum.photos/720/300?random=1">
+                <div class="titles">
+                    <h2 class="img-gen">Image Generator</h2>
+                    <h2 class="ass-img">Assigned Images</h2>
+                </div>
+
+                <div class="image-box">
+
+                    <div class="gallery-container">
+                        <div class="gallery">
+                            <div class="image-container">
+                                <img alt="Lorem Picsum Image" src="https://picsum.photos/720/300?random=1">
+                            </div>
+                        </div>
+
+                        <div class="thumbnails">
+                            <div class="thumbnail">
+                                <img alt="Lorem Picsum Image" src="https://picsum.photos/720/300?random=1">
+                            </div>
+                        </div>
+
+                        <div class="assigned-images-container">
+                            <div class="assigned-images-gallery">
+
+                            </div>
+                        </div>
+
+                        <div class="assigned-thumbnails">
+
+                        </div>
+
+                        <div class="controls">
+                            <button class="slide-btn custom-prev-main">Prev</button>
+                            <button class="slide-btn custom-next-main">Next</button>
+                        </div>
+
+                        <div class="assigned-controls">
+                            <button class="slide-btn custom-prev-assigned">Prev</button>
+                            <button class="slide-btn custom-next-assigned">Next</button>
                         </div>
                     </div>
-
-                    <div class="thumbnails">
-
-                    </div>
-
-                    <div class="controls">
-                        <button class="slide-btn custom-prev">
-                            Previous
-                        </button>
-
-                        <button class="slide-btn custom-next">
-                            Next
-                        </button>
-                    </div>
                 </div>
+
             </div>
 
 
