--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
                 <div class="titles">
                     <h2 class="img-gen">Image Generator</h2>
-                    <h2 class="ass-img">Assigned Images</h2>
+                    <h2 class="ass-img" id="assImg">Assigned Images</h2>
                 </div>
 
                 <div class="image-box">
